Wed Mar 11 18:54:54 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidldefaults.mpb:
          Added build_files as base project, that way also the mpc/mwc
          files are added to the generated solution. This way we see
          in the ms ide also for custom idl projects the mpc files.
          Thanks to Adam Mitz for suggesting this solution

Wed Mar 11 07:39:54 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Advanced/ch_12/icp.cpp
        * examples/Advanced/ch_18/icp.cpp
        * examples/Advanced/ch_21/icp.cpp
        * examples/Advanced/ch_8_and_10/icp.cpp
          Always use ACE_OS::rand

Wed Mar 11 07:20:54 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Advanced/ch_12/Advanced_ch_12.mpc
        * examples/Advanced/ch_18/Advanced_ch_18.mpc
        * examples/Advanced/ch_21/Advanced_ch_21.mpc
          Disabled server project for the moment

        * examples/Advanced/ch_21/server.cpp:
          Fixed compile warning

Tue Mar 10 23:56:26 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * orbsvcs/tests/Notify/Persistent_Filter/Filter.cpp:

          Added delay to synchronize supplier and consumer to
          avoid test failure due to lost events.

Tue Mar 10 19:05:54 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Generator_Parser_12.cpp:
          Check return values of write_ulong

        * tao/IIOP_Transport.cpp:
          Use operator!

Tue Mar 10 18:47:54 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
          Fixed unicode compile error

Tue Mar 10 14:18:19 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
          Optimized logging when ZIOP is not enabled.

        * tao/ZIOP/ZIOP.cpp:
        * tao/ZIOP/ZIOP_Stub.cpp:
          Implemented CompressorIdLevelList policy. On the client
          ZIOP checks which compressor should be used.